welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:38: error: ':' expected but ')' found.
  def faireL(nbM) {
                ^PatternPicture:58: error: identifier expected but '}' found.
} 
^