welcome.lessons.welcome.methods.picture.PatternPicture.scala.code
override def run() {
  
  def paint() {
    baisseBrosse()
    leveBrosse()
  }
  
  def faire1(c:Color) {
    setCouleurBrosse(c)
    avance()
    paint()
    gauche()
    avance()
    gauche()
    avance()
    paint()
    gauche()
    avance()
    gauche()
    avance()
    avance()
    avance()
    gauche()
  }
  
  
  
  def faireLM(c1:Color,c2:Color) {
    faire1(c1)
    faire1(c2)
  }
  
  def faireM() {
    faireLM(Color.red,Color.blue)
    faireLM(Color.green,Color.yellow)
  }
  
  def faireL(nbM) {
    for (i<-1 to nbM)
    {
      faireM()
    }
    for(i<-1 to 4*(nbM-1))
    {
      recule()
    }
  }
  
  faireL()
  gauche()
  for (i<-1 to 4)
  {
    avance()
  }
  droite()
  faireL()
  
}